@@ -1,11 +1,11 @@
 FROM debian:11.3
 
-RUN apt-get update && apt-get -y install git gcc make libncurses-dev libssl-dev xorg-dev libsdl1.2-dev libpulse-dev libsndfile1-dev
+RUN apt-get update && apt-get -y install git gcc make libncurses-dev libssl-dev xorg-dev libsdl1.2-dev libpulse-dev libsndfile1-dev libasound2-dev
 
 ENV CFLAGS "-O3"
 ENV LDFLAGS "-O3"
 
-RUN git clone https://github.com/chernandezba/zesarux.git && cd zesarux/src && ./configure --enable-memptr --enable-visualmem --enable-cpustats --enable-ssl --disable-caca --disable-aa --disable-cursesw --prefix /usr && make -j2
+RUN git clone https://github.com/chernandezba/zesarux.git && cd zesarux/src && ./configure --enable-memptr --enable-visualmem --enable-cpustats --enable-ssl --disable-caca --disable-aa --disable-cursesw --prefix /usr && make clean && make -j2
 
 #temp
 #COPY automatic_tests.sh /zesarux/src/automatic_tests.sh
