@@ -1,0 +1,20 @@
+FROM fedora:38
+
+ENTRYPOINT [ "/bin/sh" ]
+
+RUN yum -y install which git gcc make ncurses-devel openssl-devel pulseaudio-libs-devel libsndfile-devel alsa-lib-devel SDL2-devel
+RUN yum -y groupinstall "X Software Development"
+
+ENV CFLAGS "-O3"
+ENV LDFLAGS "-O3"
+
+RUN git clone https://github.com/chernandezba/zesarux.git && cd zesarux/src && ./configure --enable-memptr --enable-visualmem --enable-cpustats --enable-ssl --disable-caca --disable-aa --disable-cursesw --enable-sdl2 --prefix /usr && make clean && make -j2
+
+
+RUN cd zesarux/src && ./generate_install_sh.sh
+
+WORKDIR /zesarux/src
+
+ENTRYPOINT [ "./zesarux" ]
+
+CMD [ "--vo" , "stdout", "--ao" , "null" ]
