@@ -9,6 +9,7 @@ Added ZX Desktop icons for TSConf, Baseconf
 Added show current AY Player song playing on console <-- TODO fix this description
 Added PCW colour modes
 Added compiled version for Ubuntu
+Added compiled version for Fedora
 
 * As always, there are some other minor bugfixes and improvements
 
